bfg-main/bfg-ui/src/app/features/search/file-search/file-search/file-search.component.scss
.file-search-create-card {
    margin: 15px 15px 15px 15px;

    .top-error-message {
        margin-left: 24px;
    }

    .mat-form-field {
        width: 100%;

        .error-message {
            white-space: pre-wrap;
        }
    }

    .ts-item-section {
        display: -ms-grid;
        display: grid;
        grid-template-columns: 150px auto;
        -ms-grid-columns: 150px auto;

        .ts-item-section-title {
            -ms-grid-column: 1;
        }

        .ts-item-section-value {
            -ms-grid-column: 2;

            .section-info {
                display: grid;
                display: -ms-grid;
                grid-template-columns: 130px auto;
                -ms-grid-columns: 130px auto;

                .section-label {
                    -ms-grid-column: 1;
                    margin: 0 !important;
                    display: -ms-flexbox;
                    display: flex;
                    -ms-flex-pack: center;
                    -ms-flex-align: end;
                    justify-content: center;
                    -ms-flex-direction: column;
                    flex-direction: column;
                }

                .section-value {
                    -ms-grid-column: 2;
                    padding-left: 15px;
                    display: -ms-flexbox;
                    display: flex;
                    -ms-flex-pack: center;
                    -ms-flex-align: center;
                    justify-content: center;
                    -ms-flex-direction: column;
                    flex-direction: column;
                }
            }
        }
    }

    .mat-table {
        width: 100%;

        .mat-cell, .mat-cell > button {
            word-wrap: break-word !important;
            white-space: unset !important;
            overflow-wrap: break-word;
            word-wrap: break-word;
            word-break: break-word;
            -ms-hyphens: auto;
            -moz-hyphens: auto;
            -webkit-hyphens: auto;
            hyphens: auto;
            padding-left: 4px;
            padding-right: 4px;
        }

        .mat-column-service {
            flex: 0 0 5% !important;
            width: 5% !important;
        }

        .mat-column-error {
            flex: 0 0 6% !important;
            width: 6% !important;
        }

        .mat-column-type,
        .mat-column-status,
        .mat-column-WFID,
        .mat-column-id {
            flex: 0 0 7% !important;
            width: 7% !important;
        }

        .mat-column-transactions {
            flex: 0 0 8% !important;
            width: 8% !important;
        }

        .mat-column-filename {
            flex: 0 0 19% !important;
            width: 19% !important;
        }

        .mat-column-timestamp,
        .mat-column-reference {
            flex: 0 0 14% !important;
            width: 14% !important;
        }

    }

    .value-table-cell {
        width: 100%;
    }

    .stepper-actions {
        margin-top: 15px;

        .action-button {
            margin-right: 15px;
        }
    }
}

